[metadata]
name = aioredux
summary = Pythonic redux
description-file =
    README.rst
author = aioredux developers
author-email = aioredux-developers@example.net
home-page = https://github.com/ariddell/aioredux
classifier =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    aioredux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
